--- a/stylesheets/sass/core.scss
+++ b/stylesheets/sass/core.scss
@@ -17,8 +17,6 @@ body{
   position: fixed;
   left: 0;
   bottom: 0;
-  background:{
-    image: url('../css/imgs/groundTile256.jpg') repeat-x;
-    size: $groundTileSize;
-  }
+  background: url('../css/imgs/groundTile256.jpg') repeat-x;
+  background-size: $groundTileSize;
 }
