--- a/stylesheets/sass/core.scss
+++ b/stylesheets/sass/core.scss
@@ -1,6 +1,6 @@
 // Core CSS
 // Variables
-$groundTileSize:  256px;
+$groundTileSize:  128px;
 
 
 // HTML Elements
@@ -10,13 +10,58 @@ body{
   background-image: linear-gradient(#1c8dff, #85eaef);
 }
 
+// Classes
+.cloud{
+  height: 125px;
+  width: 125px;
+
+  background: url('imgs/cloudTile.png');
+  background-size: 125px;
+
+  animation:{
+    name: movingCloud;
+    duration: 2s;
+    iteration-count: infinite;
+  }
+  animation-timing-function: ease-in;
+}
+
+// Animations
+@keyframes movingCloud{
+  0%{
+    transform: translateX(0px);
+  }
+  50%{
+    transform: translateX(150px);
+  }
+  100%{
+    transform: translateX(0px);
+  }
+}
+
 // ID's
+#c1{
+  position: relative;
+  top: 50px;
+  left: 150px;
+
+  animation-delay: 1s;
+}
+
+#c2{
+  position: relative;
+  top: 50px;
+  left: 300px;
+
+  animation-delay: 3s;
+}
+
 #ground{
   height: $groundTileSize;
   width: 100vw;
   position: fixed;
   left: 0;
   bottom: 0;
-  background: url('../css/imgs/groundTile256.jpg') repeat-x;
+  background: url('imgs/groundTile256.jpg') repeat-x;
   background-size: $groundTileSize;
 }
